--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.2.1",
     "rxjs": "5.3.0",
     "systemjs": "0.19.47",
+    "yarn": "^1.3.2",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
